<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                            tools:context=".detail.player.DetailPlayerActivity"
                                            tools:showIn="@layout/activity_detail_player">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/weight_kg"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/tv_berat_detail_player"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/value"
                        android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/height_m"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/tv_tinggi_detail_player"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/value"
                        android:textSize="17sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
                android:id="@+id/tv_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/reward"
                android:textSize="15sp"
                android:textStyle="bold" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/black" />

        <TextView
                android:id="@+id/tv_desc_detail_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/overview" />

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
