<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".detail.match.DetailMatchActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/layout_Detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="20dp">

            <ProgressBar
                    android:id="@+id/pd_detail_activity"
                    android:layout_width="32dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center" />

            <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:text="@string/date" />

            <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    tools:text="@string/time" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3">

                <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                    <ImageView
                            android:id="@+id/imgHomeLogo"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_centerHorizontal="true" />

                    <TextView
                            android:id="@+id/tvHomeTeam"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgHomeLogo"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            tools:text="@string/tvHomeTeam" />
                </RelativeLayout>

                <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="vs"
                            android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                    <ImageView
                            android:id="@+id/imgAwayLogo"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_centerHorizontal="true" />

                    <TextView
                            android:id="@+id/tvAwayTeam"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgAwayLogo"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            tools:text="@string/tvAwayTeam" />
                </RelativeLayout>
            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/darker_gray" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/goals"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                <TextView
                        android:id="@+id/homeGoalDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textStart" />

                <TextView
                        android:id="@+id/awayGoalDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3">

                <TextView
                        android:id="@+id/homeShots"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="1" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:text="@string/awayShots"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                <TextView
                        android:id="@+id/awayShots"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="1" />
            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/darker_gray" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/layout"
                    android:textAlignment="center" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:weightSum="3">

                <TextView
                        android:id="@+id/homeGoalKeeper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textStart" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:text="@string/homeGoalKeeper"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />

                <TextView
                        android:id="@+id/awayGoalKeeper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:weightSum="3">

                <TextView
                        android:id="@+id/homeDefense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textStart" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:text="@string/homeDefense"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />

                <TextView
                        android:id="@+id/awayDefense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:weightSum="3">

                <TextView
                        android:id="@+id/homeMidfield"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textStart" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:text="@string/center"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />

                <TextView
                        android:id="@+id/awayMidfield"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:weightSum="3">

                <TextView
                        android:id="@+id/homeForward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textStart" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:text="@string/forward"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />

                <TextView
                        android:id="@+id/awayForward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:weightSum="3">

                <TextView
                        android:id="@+id/homeSubstitution"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textStart" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:text="@string/subtitution"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />

                <TextView
                        android:id="@+id/awaySubstitution"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>